Working on nav bar

--- a/flipkart/flipkart.html
+++ b/flipkart/flipkart.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width" initial-scale="1">
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <link rel="stylesheet" href="style.css">
         <title>Flipkart Home Page</title>
     </head>
@@ -11,7 +11,33 @@
             <img src="flipkart-explore-plus.png" alt="Flipkart logo">
             <input type="text" class="search" placeholder="Search for products,brands and more"> 
             <button type="button" value="Login" class="login-button">Login</button>
+            <div class="dropdown">
+                <div class="btn">
+                    <button type="button" class="bt">More</button>
+                    <div class="b">
+                        <a href="#">Mens</a>
+                        <a href="#">Womens</a>
+                        <a href="#">Childeren</a>
+                    </div>
+                </div>
+            </div>
+            <div>
+            <img src="icon.png" alt="cart icon" class="cimg">
+            <button type="button" class="cart">Cart</button>
+            </div>
         </nav>
+
+        <div class="items">
+            <div class="bd">Item1</div>
+            <div class="bd">Item2</div>
+            <div class="bd">Item3</div>
+            <div class="bd">Item4</div>
+            <div class="bd">Item5</div>
+            <div class="bd">Item6</div>
+            <div class="bd">Item7</div>
+            <div class="bd">Item8</div>
+            <div class="bd">Item9</div>
+        </div>
     </body>
 
 </html>
