--- a/flipkart/flipkart.html
+++ b/flipkart/flipkart.html
@@ -29,30 +29,47 @@
         
         <section> 
             <div class="nav-container-2">
-                <div class="bd"><img src="images/soffer.png" alt="Top offer img"><p style="margin-top: 15px;">Top Offers</p></div>
-                <div class="bd"><img src="images/grocery.png" alt="Grocery img"><p style="margin-top: 15px;">Grocery</p></div>
-                <div class="bd"><img src="images/mobile.png" alt="Mobile img"><p style="margin-top: 15px;">Mobiles</p></div>
-                <div class="bd"><img src="images/fashion.png" alt="Fashion img"><select class="item-button">
-                    <option selected>Fashion</option>
-                    <option>Men</option><option>Women</option><option>Children</option>
-                </select></div>
-                <div class="bd"><img src="images/electronics.png" alt="Electronic img"><select class="item-button">
-                    <option selected>Electronics</option>
-                    <option>Mobile</option><option>Laptop</option><option>Headphones</option>
-                </select></div>
-                <div class="bd"><img src="images/home.png" alt="Home img"><select class="item-button">
-                    <option selected>Home</option>
-                    <option>Mobile</option><option>Laptop</option><option>Headphones</option>
-                </select></div>
-                <div class="bd"><img src="images/appliances.png" alt="appliances img"><select class="item-button">
-                    <option selected>Appliances</option>
-                    <option>Mobile</option><option>Laptop</option><option>Headphones</option>
-                </select></div>
+                <div class="bd">
+                    <img src="images/soffer.png" alt="Top offer img"><p style="margin-top: 15px;">Top Offers</p>
+                </div>
+                <div class="bd">
+                    <img src="images/grocery.png" alt="Grocery img"><p style="margin-top: 15px;">Grocery</p>
+                </div>
+                <div class="bd">
+                    <img src="images/mobile.png" alt="Mobile img"><p style="margin-top: 15px;">Mobiles</p>
+                </div>
+                <div class="bd">
+                    <img src="images/fashion.png" alt="Fashion img">
+                    <select class="item-button">
+                        <option selected>Fashion</option>
+                        <option>Men</option><option>Women</option><option>Children</option>
+                    </select>
+                </div>
+                <div class="bd"><img src="images/electronics.png" alt="Electronic img">
+                    <select class="item-button">
+                        <option selected>Electronics</option>
+                        <option>Mobile</option><option>Laptop</option><option>Headphones</option>
+                    </select>
+                </div>
+                <div class="bd"><img src="images/home.png" alt="Home img">
+                    <select class="item-button">
+                        <option selected>Home</option>
+                        <option>Mobile</option><option>Laptop</option><option>Headphones</option>
+                    </select>
+                </div>
+                <div class="bd"><img src="images/appliances.png" alt="appliances img">
+                    <select class="item-button">
+                        <option selected>Appliances</option>
+                        <option>Mobile</option><option>Laptop</option><option>Headphones</option>
+                    </select>
+                </div>
                 <div class="bd"><img src="images/travel.png" alt="Travel img"><p style="margin-top: 15px;">Travel</p></div>
-                <div class="bd"><img src="images/beauty.png" alt="Beauty img"><select class="item-button">
-                    <option selected>Beauty,Toys&More</option>
-                    <option>Mobile</option><option>Laptop</option><option>Headphones</option>
-                </select></div>
+                <div class="bd"><img src="images/beauty.png" alt="Beauty img">
+                    <select class="item-button">
+                        <option selected>Beauty,Toys&More</option>
+                        <option>Mobile</option><option>Laptop</option><option>Headphones</option>
+                    </select>
+                </div>
             </div>
         </section>
 
@@ -65,37 +82,49 @@
                         </div>
                         <div id="left-side">
                             <div>
-                                <div><img src="images/watch.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/watch.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center; font-weight: bold;">Casio, Fastrack, Sonata..</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Upto 80%+Extra 10%off</p>
                                 <p style="text-align: center; color:gray;">Knockout Deals</p>
                             </div>
                             <div>
-                                <div><img src="images/template.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/template.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Home Templates & more</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Extra 10%off</p>
                                 <p style="text-align: center; color:gray;">Space saving furniture</p>
                             </div>
                             <div>
-                                <div><img src="images/tablet.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/tablet.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Premium Tablet Cases</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Extra 10%off</p>
                                 <p style="text-align: center; color:gray;">For all top models</p>
                             </div>
                             <div>
-                                <div><img src="images/sofa.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/sofa.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Best of home decor</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">From &#8377;79</p>
                                 <p style="text-align: center; color:gray;">Lowest price ever</p>
                             </div>
                             <div>
-                                <div><img src="images/blue.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/blue.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Metronaut, Provogue & ..</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">From &#8377;249+Extra 10%off</p>
                                 <p style="text-align: center; color:gray;">Jackets, Dresses & More</p>
                             </div>
                             <div>
-                                <div><img src="images/mobile2.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/mobile2.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">LAVA A1500</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Flat &#8377;830 off</p>
                                 <p style="text-align: center; color:gray;">Now 999</p>
@@ -118,37 +147,49 @@
                         </div>
                         <div id="left-side">
                             <div>
-                                <div><img src="images/harmonium.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/harmonium.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Harmoniums</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Upto 60% off</p>
                                 <p style="text-align: center; color:gray;">Shop Now!</p>
                             </div>
                             <div>
-                                <div><img src="images/bansri.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/bansri.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Flutes</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Up to 80% off</p>
                                 <p style="text-align: center; color:gray;">Shop Now!</p>
                             </div>
                             <div>
-                                <div><img src="images/violin.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/violin.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Acoustic Guitars</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Starting &#8377;1799</p>
                                 <p style="text-align: center; color:gray;">Juarez, Revel</p>
                             </div>
                             <div>
-                                <div><img src="images/musical.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/musical.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Musical Accessories</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Upto 80% off</p>
                                 <p style="text-align: center; color:gray;">Shop Now!</p>
                             </div>
                             <div>
-                                <div><img src="images/microphone.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/microphone.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Microphone Accessories</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Upto 80% off</p>
                                 <p style="text-align: center; color:gray;">Shop Now!</p>
                             </div>
                             <div>
-                                <div><img src="images/guitar.png" style="height: 200px; width:200px; margin: 10px;" ></div>
+                                <div>
+                                    <img src="images/guitar.png" style="height: 200px; width:200px; margin: 10px;" >
+                                </div>
                                 <p style="text-align: center;font-weight: bold; ">Acoustic Guitars</p>
                                 <p style="text-align: center; color:rgb(115, 183, 115);">Starting &#8377;1999</p>
                                 <p style="text-align: center; color:gray;">By,Revel</p>
